--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -1,4 +1,5 @@
 .login-wrapper {
+  position: absolute;
   width: 100%;
   height: 100%;
   font-family: 'Open Sans', sans-serif;
@@ -17,10 +18,32 @@
     width: 300px;
     height: 300px;
     h1 {
-      color: #fff;
+      color: #ffffff;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
       letter-spacing: 1px;
       text-align: center;
+    }
+    input {
+      width: 100%;
+      margin-bottom: 10px;
+      background: rgba(0, 0, 0, 0.3);
+      outline: none;
+      padding: 10px;
+      font-size: 13px;
+      color: #ffffff;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 4px;
+      box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
+      -webkit-transition: box-shadow .5s ease;
+      -moz-transition: box-shadow .5s ease;
+      -o-transition: box-shadow .5s ease;
+      -ms-transition: box-shadow .5s ease;
+      transition: box-shadow .5s ease;
+
+      &:focus {
+        box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
+      }
     }
   }
 }
