--- a/src/components/EstablishmentList/EstablishmentList.scss
+++ b/src/components/EstablishmentList/EstablishmentList.scss
@@ -25,4 +25,33 @@
     color: #ffffff;
     cursor: pointer;
   }
+
+  .success-popup {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: transparent;
+    font-family: 'Open Sans', sans-serif;
+    &.success-popup-enter {
+      font-size: 62px;
+      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+      transition: 1s;
+      &.success-popup-enter-active {
+        font-size: 94px;
+        text-shadow: 0 0 0 rgba(255, 255, 255, 1);
+      }
+    }
+
+    &.success-popup-exit {
+      font-size: 94px;
+      text-shadow: 0 0 0 rgba(255, 255, 255, 1);
+      transition: .5s;
+      &.success-popup-exit-active {
+        text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+      }
+    }
+  }
 }
