Style and navbar

--- a/src/components/Establishment/Establishment.scss
+++ b/src/components/Establishment/Establishment.scss
@@ -1,9 +1,10 @@
 .establishment {
-  min-height: 300px;
+  min-height: 350px;
   -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
   -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
   padding: 30px;
+  margin-top: 30px;
 
   textarea,
   input {
