--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,8 +1,8 @@
 .menu-container {
   margin-bottom: 20px;
-  -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-  -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-  box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
   padding: 15px 30px;
   h2 {
     margin-right: auto;
@@ -39,6 +39,7 @@
 
 .add-item-popup {
   position: fixed;
+  z-index: 1;
   left: 0;
   right: 0;
   top: 100px;
@@ -46,6 +47,75 @@
   height: 80vh;
   width: 80vw;
   background-color: #ffffff;
+  padding: 50px;
+
+  input, textarea {
+    background: transparent;
+    border: none;
+    font-family: 'Open Sans', sans-serif;
+    color: #000000;
+    width: 100%;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #888888;
+    &.product-name {
+      font-size: 24px;
+    }
+  }
+
+  textarea {
+    resize: none;
+    border-bottom: none;
+  }
+
+  .add-item-menu {
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 100%;
+
+    .add-product-attribute {
+      margin-top: 20px;
+    }
+  }
+
+  .item-options {
+    padding-top: 15px;
+
+    .product-option-wrapper {
+      overflow: hidden;
+      input {
+        float: right;
+        width: 95%;
+      }
+      span {
+        float: right;
+        color: red;
+        cursor: pointer;
+      }
+    }
+
+    div[class*='options_'] {
+      overflow: hidden;
+    }
+
+    .add-option-button {
+      width: 90%;
+      margin-right: 5px;
+      float: right;
+    }
+  }
+
+  .options-wrapper {
+    overflow: hidden;
+    input {
+      width: 85%;
+      float: right;
+    }
+    span {
+      margin-left: 5%;
+      cursor: pointer;
+      float: right;
+    }
+  }
 
   .close-add-item {
     cursor: pointer;
