--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -1,38 +1,11 @@
-.menu-container {
-  margin-bottom: 20px;
+.menu-product {
   -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
   -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-  padding: 15px 30px;
-  h2 {
-    margin-right: auto;
-    font-family: 'Open Sans', sans-serif;
+  padding: 30px;
+  margin-top: 30px;
+
+  h2, .product-description {
     color: #ffffff;
-  }
-
-  textarea,
-  input {
-    background: transparent;
-    border: none;
-    font-family: 'Open Sans', sans-serif;
-    color: #ffffff;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  input {
-    border-bottom: 1px solid #888888;
-  }
-
-  textarea {
-    resize: none;
-    min-height: 100px;
-  }
-
-  .buttons-wrapper {
-    button, .sweet-alert {
-      margin: 10px;
-      flex-grow: 1;
-    }
   }
 }
