--- a/src/components/EstablishmentList/EstablishmentList.scss
+++ b/src/components/EstablishmentList/EstablishmentList.scss
@@ -1,6 +1,7 @@
 .establishment-list {
   .create-establishment-button {
     min-height: 350px;
+    height: calc(100% - 30px);
     width: 100%;
     -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
     -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
