--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -8,4 +8,35 @@
   h2, .product-description {
     color: #ffffff;
   }
+  .item-option p {
+    margin-bottom: 0;
+    color: #ffffff;
+  }
+  .dropdown-menu p.dropdown-item {
+    color: #000000;
+  }
+  .order-wrapper {
+    input {
+      width: 75px;
+      margin-bottom: 10px;
+      background: rgba(0, 0, 0, 0.3);
+      outline: none;
+      padding: 10px;
+      font-size: 13px;
+      color: #ffffff;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 4px;
+      box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
+      -webkit-transition: box-shadow .5s ease;
+      -moz-transition: box-shadow .5s ease;
+      -o-transition: box-shadow .5s ease;
+      -ms-transition: box-shadow .5s ease;
+      transition: box-shadow .5s ease;
+
+      &:focus {
+        box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
+      }
+    }
+  }
 }
