--- a/src/components/OrderList/OrderList.scss
+++ b/src/components/OrderList/OrderList.scss
@@ -1,44 +1,20 @@
-.establishment-list {
-  .create-establishment-button {
-    min-height: 350px;
-    width: 100%;
-    -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-    -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
-    background: transparent;
-    border: none;
-    font-family: 'Open Sans', sans-serif;
+.order-list {
+  h2, p {
     color: #ffffff;
-    cursor: pointer;
-    margin-top: 30px;
   }
 
-  .success-popup {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    left: 0;
-    right: 0;
-    text-align: center;
-    color: transparent;
-    font-family: 'Open Sans', sans-serif;
-    &.success-popup-enter {
-      font-size: 62px;
-      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-      transition: 1s;
-      &.success-popup-enter-active {
-        font-size: 94px;
-        text-shadow: 0 0 0 rgba(255, 255, 255, 1);
-      }
+  .order-item-popup {
+    h2, p {
+      color: #000000;
     }
+  }
 
-    &.success-popup-exit {
-      font-size: 94px;
-      text-shadow: 0 0 0 rgba(255, 255, 255, 1);
-      transition: .5s;
-      &.success-popup-exit-active {
-        text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-      }
-    }
+  button.new-order {
+    margin: 30px 0;
+  }
+  label {
+    color: #ffffff;
+    padding-right: 15px;
+    margin-bottom: 30px;
   }
 }
