--- a/src/components/SubmitOrder/SubmitOrder.scss
+++ b/src/components/SubmitOrder/SubmitOrder.scss
@@ -1,2 +1,31 @@
 .menu-list {
+  .total-price {
+    color: #ffffff;
+  }
+
+  button.submit-order {
+    margin: 30px 0;
+  }
+
+  .notes-wrapper {
+    text-align: center;
+    margin-top: 30px;
+    width: 100%;
+    position: relative;
+    textarea {
+      background: rgba(0, 0, 0, 0.2);
+      padding: 15px;
+      border: none;
+      border-radius: 10px;
+      font-family: 'Open Sans', sans-serif;
+      color: #ffffff;
+      width: 90%;
+      margin-bottom: 10px;
+    }
+
+    textarea {
+      resize: none;
+      min-height: 100px;
+    }
+  }
 }
